# group9tr

./: Menu.py  PCB1.PcbDoc  PCB8.PcbDoc  PCB9.PcbDoc  PCB_Project.PrjPcb  README.md  Sheet1.SchDoc  Sheet3.SchDoc  Sheet4.SchDoc  mask.py  menu.py  script.py
res_pkg_test2/: CMakeLists.txt  package.xml
res_pkg_test2/action/: time.action
res_pkg_test2/scripts/: customers.py  decepticons-diner.html  diner_node.py  feedback.py  feeder.py  menu.py  reception.py  res.py
res_pkg_test2/srv/: order.srv  start.srv
task 9/: PowerBoard.SchDoc  Protection.SchDoc  buck_5V.SchDoc  buck_8,4V.SchDoc  connectors.SchDoc  task 9.PrjPcb
task 9/__Previews/: PowerBoard.SchDocPreview  Protection.SchDocPreview  buck_5V.SchDocPreview  buck_8,4V.SchDocPreview  connectors.SchDocPreview
